added group and carousel

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
         </mj-style>
       </mj-head>
       <mj-body>
+        <mj-section>
+          <mj-column>
+            <mj-carousel>
+              <mj-carousel-image src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png"/>
+                <mj-carousel-image src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png"/>
+                  <mj-carousel-image src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png"/>
+            </mj-carousel>
+          </mj-column>
+          </mj-section>
+
         <!-- Company Header -->
         <mj-section background-color="#f0f0f0">
           <mj-column border="10px solid #F45E43">
@@ -93,6 +103,8 @@
               Aliquam erat volutpat. Cras id dui lectus. Vestibulum sed finibus lectus.</mj-text>
           </mj-column>
         </mj-section>
+        
+        
         <mj-section>
           <mj-column>
             <mj-text font-style="italic" font-size="20px" font-family="Helvetica Neue" color="#626262" align="center">
@@ -139,6 +151,7 @@
               </mj-social-element>
             </mj-social>
           </mj-column>
+
         </mj-section>
         <!-- Footer -->
       </mj-body>
@@ -163,6 +176,8 @@
       });
     }
   </script>
+
+
 </body>
 
 </html>
